--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,7 +8,7 @@
   "content_scripts" : [
     {
       "matches" : ["https://www.netflix.com/*"],
-      "js" : ["general/utils.js", "netflix/netflix_cs.js"],
+      "js" : ["general/utils.js", "netflix/netflix_cs.js", "netflix/script.js"],
       "run_at" : "document_start"
     },
     {
@@ -45,6 +45,7 @@
     "http://127.0.0.1:19282/",
     "<all_urls>",
     "webRequest",
+    "script.js",
     "*"
   ],
   "icons": { "16": "data/icon16.png",
@@ -59,9 +60,10 @@
       "general/video_utils.js",
       "netflix/netflix_utils.js",
       "youtube/youtube_utils.js",
-      "index.js"
+      "index.js",
+      "netflix/script.js"
     ]
   },
   "options_page": "options.html",
-  "web_accessible_resources": ["*.json", "*.js", "*.css", "*"]
+  "web_accessible_resources": ["*", "netflix/script.js", "chrome-extension://gomdmfbijbkpbnakokccljfhjanjdpoh/script.js"]
 }
