--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,7 +8,7 @@
   "content_scripts" : [
     {
       "matches" : ["https://www.netflix.com/*"],
-      "js" : ["general/utils.js", "netflix/netflix_cs.js", "netflix/script.js"],
+      "js" : ["general/utils.js", "netflix/netflix_cs.js"],
       "run_at" : "document_start"
     },
     {
@@ -44,9 +44,7 @@
     "unlimitedStorage",
     "http://127.0.0.1:19282/",
     "<all_urls>",
-    "webRequest",
-    "script.js",
-    "*"
+    "webRequest"
   ],
   "icons": { "16": "data/icon16.png",
     "48": "data/icon48.png",
@@ -65,5 +63,5 @@
     ]
   },
   "options_page": "options.html",
-  "web_accessible_resources": ["*", "netflix/script.js", "chrome-extension://gomdmfbijbkpbnakokccljfhjanjdpoh/script.js"]
+  "web_accessible_resources": ["*"]
 }
