--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -61,8 +61,5 @@
       "index.js"
     ]
   },
-  "options_page": "options.html",
-  "web_accessible_resources": [
-    "*.json", "*.js", "*.*"
-  ]
+  "options_page": "options.html"
 }
